testdata/fixtures/audit/positive/missing_auth_express_js.js
const express = require("express");

const app = express();

function getAdmin(req, res) {
  res.json({ secret: "admin data" });
}

app.get("/admin", getAdmin);

module.exports = app;
